added song crud operations and respective endpoints; updated yaml file
